--- a/TheoryTest/Content/Site.css
+++ b/TheoryTest/Content/Site.css
@@ -1,6 +1,13 @@
-﻿body {
-    padding-top: 50px;
+﻿
+body {
+    padding-top: 60px;
     padding-bottom: 20px;
+}
+
+@media (max-width: 979px) {
+    body {
+        padding-top: 0;
+    }
 }
 
 /* Set padding to keep content from hitting the edges */
