--- a/TheoryWeb/Views/Home/Index.cshtml
+++ b/TheoryWeb/Views/Home/Index.cshtml
@@ -12,8 +12,13 @@
         </div>
         <button class="btn btn-primary" ng-click="guess()">Guess</button>
         <button class="btn btn-danger" ng-click="reveal()">Reveal</button>
+        <button class="btn btn-default" ng-click="reset()">Reset Score</button>
     </form>
     <p ng-bind="getScore()"></p>
+    <div class="form-group">
+        <label for="difficulty">Difficulty</label>
+        <select id="difficulty" ng-model="difficulty" ng-options="x.name for x in difficulties"></select>
+    </div>
 </div>
 
 @section scripts {
