--- a/TheoryWeb/Views/Home/Index.cshtml
+++ b/TheoryWeb/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <h2 ng-bind="result" ng-class="{'animate-hide': hidden}"></h2>
     <form class="form-inline" role="form">
         <div class="form-group">
-            <input type="text" ng-model="answer" class="form-control" placeholder="e.g. C# min7b5" enter-trigger="guess()" />
+            <input type="text" ng-model="answer" class="form-control" placeholder="e.g. C# m7b5" enter-trigger="guess()" />
         </div>
         <button class="btn btn-primary" ng-click="guess()">Guess</button>
         <button class="btn btn-danger" ng-click="reveal()">Reveal</button>
@@ -16,10 +16,21 @@
     </form>
     <p ng-bind="getScore()"></p>
     <div class="form-group">
-        <label for="difficulty">Difficulty</label>
+        <label for="difficulty">Range (C Maj to...):</label>
         <select id="difficulty" ng-model="difficulty" ng-options="x.name for x in difficulties"></select>
     </div>
 </div>
+<p>
+    Examples:
+    <ul>
+        <li>A Maj</li>
+        <li>F# Dim</li>
+        <li>B Min</li>
+        <li>D Maj7</li>
+        <li>E m7</li>
+        <li>C# m7b5</li>
+    </ul>
+</p>
 
 @section scripts {
     @Scripts.Render("~/bundles/angular")
